cabal-version: 1.12

name:           lh-example-project
version:        0.1.0.0
description:    This toy package demonstrates the use of LH as a plugin.
homepage:
bug-reports:
author:         Richard Stewing
maintainer:     richard@dorsten-stewing.de
copyright:      2020 Richard Stewing
license:        MIT 
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules:
     Main
  hs-source-dirs:
      src
  build-depends:
      liquid-base,
      liquidhaskell >= 0.8.10
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
